--- a/_layouts/default.html
+++ b/_layouts/default.html
@@ -3,6 +3,7 @@
 
 <head>
   {%- include head.html -%}
+  <link rel="shortcut icon" type="image/x-icon" href="favicon.ico">
 </head>
 
 {%- if site.plainwhite.condensed_mobile contains page.layout -%}
