--- a/_layouts/page.html
+++ b/_layouts/page.html
@@ -1,6 +1,10 @@
 ---
 layout: default
 ---
+<head> 
+	 <link rel="shortcut icon" type="image/x-icon" href="favicon.ico">
+	{%- include head.html -%}
+</head>
 <div class="post-container">
     <div class="post">
         {{ content }}
