--- a/_layouts/default.html
+++ b/_layouts/default.html
@@ -21,6 +21,7 @@
         {% if site.plainwhite.portfolio_image_dark and site.plainwhite.dark_mode %}
         <img class="light" src="{{site.baseurl }}/{{ site.plainwhite.portfolio_image }}" alt="{{ site.plainwhite.name }}" />
         <img class="dark" src="{{site.baseurl }}/{{ site.plainwhite.portfolio_image_dark }}" alt="{{ site.plainwhite.name }}" />
+        <a style = "text-decoration:none" href=" https://jamieqianhui.github.io/about"><h3><b>About</b></h3></a>
         {% else %}
         <img src="{{site.baseurl }}/{{ site.plainwhite.portfolio_image }}" alt="{{ site.plainwhite.name }}" />
         {% endif %}
