--- a/_layouts/default.html
+++ b/_layouts/default.html
@@ -33,10 +33,13 @@
       <p class="tagline">{{ site.plainwhite.tagline }}</p>
       {%- endif -%}
       </div>
+      {%- if site.plainwhite.about -%}
+      <p class="about">{{ site.plainwhite.about }}</p>
+      {%- endif -%}
+      </div>
       {% capture footer %}
       {%- if site.plainwhite.social_links != '' -%}
       <ul class="social about-footer {{condensed_class}}">
-        <a style = "text-decoration:none" href=" https://wjang96.github.io/about"><h3><b>About</b></h3></a>
         {%- if site.plainwhite.social_links.github -%}
         <a href="https://github.com/{{ site.plainwhite.social_links.github }}" target="_blank">
           <li>
