--- a/_layouts/default.html
+++ b/_layouts/default.html
@@ -36,7 +36,7 @@
       {% capture footer %}
       {%- if site.plainwhite.social_links != '' -%}
       <ul class="social about-footer {{condensed_class}}">
-        <p style = "text-decoration:none" href=" https://wjang96.github.io/about"><h3><b>About</b></h3></p>
+        <a style = "text-decoration:none" href=" https://wjang96.github.io/about"><h3><b>About</b></h3> <br></a>
         {%- if site.plainwhite.social_links.github -%}
         <a href="https://github.com/{{ site.plainwhite.social_links.github }}" target="_blank">
           <li>
