--- a/_layouts/default.html
+++ b/_layouts/default.html
@@ -33,11 +33,13 @@
       <p class="tagline">{{ site.plainwhite.tagline }}</p>
       {%- endif -%}
       </div>
+      <ul class="description">
+        <a style = "text-decoration:none" href=" https://wjang96.github.io/about"><h3><b>About</b></h3></a>
+        <b></b>
+      </ul>
       {% capture footer %}
       {%- if site.plainwhite.social_links != '' -%}
       <ul class="social about-footer {{condensed_class}}">
-        <a style = "text-decoration:none" href=" https://wjang96.github.io/about"><h3><b>About</b></h3></a>
-        <b></b>
         {%- if site.plainwhite.social_links.github -%}
         <a href="https://github.com/{{ site.plainwhite.social_links.github }}" target="_blank">
           <li>
