--- a/_layouts/default.html
+++ b/_layouts/default.html
@@ -34,7 +34,7 @@
       {%- endif -%}
       </div>
       <ul class="description">
-        <a style = "text-decoration:none" href=" https://wjang96.github.io/about"><h3><b>About</b></h3></a>
+        <a style = "text-decoration:none" href=" https://wjang96.github.io/about"><h3>About</h3></a>
       </ul>
       {% capture footer %}
       {%- if site.plainwhite.social_links != '' -%}
