--- a/_layouts/default.html
+++ b/_layouts/default.html
@@ -148,7 +148,7 @@
       </nav>
       {%- endif -%}
       <p class="about-footer {{condensed_class}}">
-      <a style = "text-decoration:none" href=" https://wjang96.github.io/about"><h3>About</h3></a>
+        <a href="https://wjang96.github.io/about"><h3>About</h3></a>
       </p>
       <p class="about-footer {{condensed_class}}">&copy;
         {{ "now" | date: "%Y" }}</p>
