--- a/_layouts/default.html
+++ b/_layouts/default.html
@@ -149,8 +149,8 @@
       {%- endif -%}
       <p class="about-footer {{condensed_class}}">
         <a href="https://wjang96.github.io/about"><h3>About</h3></a>
-      </p>
-      <p class="about-footer {{condensed_class}}">&copy;
+        <br>
+        &copy;
         {{ "now" | date: "%Y" }}</p>
       {%- if site.plainwhite.dark_mode -%}
       <div class="about-footer {{condensed_class}}">
