--- a/_layouts/default.html
+++ b/_layouts/default.html
@@ -147,10 +147,7 @@
         </ul>
       </nav>
       {%- endif -%}
-      <p class="about-footer {{condensed_class}}">
-        <a href="https://wjang96.github.io/about"><h3>About</h3></a>
-        <br>
-        &copy;
+      <p class="about-footer {{condensed_class}}">&copy;
         {{ "now" | date: "%Y" }}</p>
       {%- if site.plainwhite.dark_mode -%}
       <div class="about-footer {{condensed_class}}">
