--- a/_layouts/default.html
+++ b/_layouts/default.html
@@ -162,6 +162,9 @@
       {%- endif -%}
       {% endcapture %}
       {{ footer }}
+      <nav>
+				<a href="{{ "/about.md" | relative_url }}">About</a>		
+			</nav>
     </section>
     <section class="content">
       {{ content }}
