--- a/_layouts/default.html
+++ b/_layouts/default.html
@@ -163,8 +163,8 @@
       {% endcapture %}
       {{ footer }}
       <nav>
-				<a href="{{ "/about.md" | relative_url }}">About</a>		
-			</nav>
+	      <a href="https://wjang96.github.io/about">About</a>
+      </nav>
     </section>
     <section class="content">
       {{ content }}
