--- a/_layouts/default.html
+++ b/_layouts/default.html
@@ -162,9 +162,9 @@
       {%- endif -%}
       {% endcapture %}
       {{ footer }}
-      <ul class="about-footer {{condensed_class}}">
+      <p class="about-footer {{condensed_class}}">
 	<a href="https://wjang96.github.io/about">About</a>
-      </ul>
+      </p>
     </section>
     <section class="content">
       {{ content }}
